test/hlt/test_case/object_test/result_repl_mode.txt
Result for test_case/object_test/test_object.py:
======[pikapython packages installed]======
pikascript-core==v1.13.3 (2024/05/25 01:26:44)
PikaStdLib===v1.13.3
time===v0.2.2
===========================================
~~~/ POWERED BY \~~~
~  pikapython.com  ~
~~~~~~~~~~~~~~~~~~~~
hello pikascript
>>> # Object support
>>> print("=====Test Start=====")
=====Test Start=====
>>> # Class Definition
>>> class Animal:
...     def __init__(self, name):
...         self.name = name
...     
...     def speak(self):
...         return "%s makes a sound" %(self.name)
... 
>>> # Class Inheritance
>>> class Dog(Animal):
...     def speak(self):
...         return "%s barks" %(self.name)
... 
>>> # Method Definition
>>> class Bird(Animal):
...     def fly(self):
...         return "%s is flying" %(self.name)
... 
>>> # Method Overloading
>>> class Math:
...     def add(self, a, b, c=0):
...         return a + b + c
... 
>>> # Method Call
>>> dog = Dog("Buddy")
>>> print(dog.speak())
Buddy barks
>>> 
>>> # Parameter Definition
>>> def greet(greeting="Hello", *names):
...     for name in names:
...         print("%s %s!" %(greeting, name))
... 
>>> # Parameter Assignment
>>> greet("Hi", "Alice", "Bob")
Hello Hi!
Hello Alice!
Hello Bob!
>>> 
>>> # Object Creation
>>> cat = Animal("Whiskers")
>>> print(cat.speak())
Whiskers makes a sound
>>> 
>>> # Object Destruction
>>> del cat
>>> 
>>> # Object Nesting
>>> class Owner:
...     def __init__(self, name, pet):
...         self.name = name
...         self.pet = pet
... 
>>> owner = Owner("Alice", dog)
>>> print(owner.pet.speak())
Buddy barks
>>> 
>>> # Control Flow
>>> if owner.name == "Alice":
...     print("Owner is Alice")
... elif owner.name == "Bob":
Owner is Alice
>>>     print("Owner is Bob")
Owner is Bob
>>> else:
...     print("Unknown owner")
... 
>>> count = 0
>>> while count < 3:
...     print("Count is %s" %(count))
...     count += 1
... 
Count is 0
Count is 1
Count is 2
>>> print("=====Test End=====")
Error: line buff overflow, please use bigger 'PIKA_LINE_BUFF_SIZE'
